# SpeakerObjects_source

./: CMakeLists.txt  README.md
resource/: SpeakerObjects.uidesc
source/: SOparam.h  SOpinna.h  SPDSPparam.cpp  SPDSPparam.h  SPcids.h  SPcontroller.cpp  SPcontroller.h  SPentry.cpp  SPprocessor.cpp  SPprocessor.h  version.h
